Added new easter eggs

--- a/config.json
+++ b/config.json
@@ -2,13 +2,19 @@
   {
     "nom": "Rebeu",
     "prenom": "Nathan",
-    "dateDepart": "2025-12-17T09:00:00",
-    "dateRetour": "2026-01-15T18:30:00"
+    "dateDepartDrom": "2025-12-18T10:00:00",
+    "dateRetourFrance": "2026-02-26T9:00:00"
   },
   {
-    "nom": "Micka",
-    "prenom": "Micka",
-    "dateDepart": "2025-11-14T01:11:00",
-    "dateRetour": "2026-03-01T12:00:00"
+    "nom": "Gorius",
+    "prenom": "Robin",
+    "dateDepartDrom": "2026-01-10T10:00:00",
+    "dateRetourFrance": "2026-02-21T9:00:00"
+  },
+  {
+    "nom": "Sauvage",
+    "prenom": "Victorian",
+    "dateDepartDrom": "2025-12-31T210:00:00",
+    "dateRetourFrance": "2026-02-21T08:00:00"
   }
 ]
